--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         <div class="container xl:max-w-6xl mx-auto px-4">
           <div class="lg:flex lg:justify-between">
           	<div class="flex justify-between">
-	            <div class="mx-w-10 flex items-center">Profile Communications</div>
+	            <div class="mx-w-10 flex items-center text-2xl font-bold">Profile Communications</div>
 		          <!-- mobile nav -->
 	            <div class="flex flex-row items-center py-4 lg:py-0">
 	              <div class="relative text-gray-900 hover:text-black block lg:hidden">
@@ -100,7 +100,7 @@
 
     <!-- hero start -->
 		<div id="hero" class="section  relative z-0 py-16 md:pt-32 md:pb-20 bg-gray-50">
-		  <div class="container xl:max-w-6xl mx-auto px-4 h-screen">
+		  <div class="container xl:max-w-6xl mx-auto px-4">
 		    <div class="flex flex-wrap flex-row -mx-4 justify-center">
 		      <!-- content -->
 		      <div class="flex-shrink max-w-full px-4 sm:px-12 lg:px-18 w-full sm:w-9/12 lg:w-1/2 self-center">
@@ -751,10 +751,10 @@
         <div class="flex flex-wrap flex-row lg:justify-between -mx-3">
           <div class="flex-shrink max-w-full w-full lg:w-2/5 px-3 lg:pr-16">
             <div class="flex items-center mb-2">
-              <span class="text-3xl leading-normal mb-2 font-bold text-gray-800 mt-2">Tailone</span>
+              <span class="text-3xl leading-normal mb-2 font-bold text-gray-800 mt-2">Profile Communications</span>
               <!-- <img src="src/img-min/logo.png" alt="LOGO"> -->
             </div>
-            <p>Tailwind One Page Template for build One page landing page.</p>
+            <p>Respect</p>
             <ul class="space-x-3 mt-6 mb-6 Lg:mb-0">
               <!--facebook-->
               <li class="inline-block">
@@ -798,12 +798,12 @@
                 </ul>
               </div>
               <div class="flex-shrink max-w-full w-1/2 md:w-1/3 mb-6 lg:mb-0">
-                <h4 class="text-base leading-normal mb-3 uppercase text-gray-800">Includes</h4>
+                <h4 class="text-base leading-normal mb-3 uppercase text-gray-800">Links</h4>
                 <ul>
-                  <li class="py-1 hover:text-gray-900"><a href="#">Tailwind Css</a></li>
-                  <li class="py-1 hover:text-gray-900"><a href="#">Javascript</a></li>
-                  <li class="py-1 hover:text-gray-900"><a href="#">Vendors Js</a></li>
-                  <li class="py-1 hover:text-gray-900"><a href="#">Build System</a></li>
+                  <li class="py-1 hover:text-gray-900"><a href="#">Home</a></li>
+                  <li class="py-1 hover:text-gray-900"><a href="#">About</a></li>
+                  <li class="py-1 hover:text-gray-900"><a href="#">What we do</a></li>
+                  <li class="py-1 hover:text-gray-900"><a href="#">Contact Us</a></li>
                 </ul>
               </div>
               <div class="flex-shrink max-w-full w-1/2 md:w-1/3 mb-6 lg:mb-0">
@@ -812,7 +812,7 @@
                   <li class="py-1 hover:text-gray-900"><a href="#">Privacy Policy</a></li>
                   <li class="py-1 hover:text-gray-900"><a href="#">Terms of Use</a></li>
                   <li class="py-1 hover:text-gray-900"><a href="#">License</a></li>
-                  <li class="py-1 hover:text-gray-900"><a href="#">GDPR</a></li>
+                  <!-- <li class="py-1 hover:text-gray-900"><a href="#">GDPR</a></li> -->
                 </ul>
               </div>
             </div>
@@ -826,7 +826,7 @@
       <div class="container xl:max-w-6xl mx-auto px-4 py-4 border-t border-gray-200 border-opacity-10">
         <div class="row">
           <div class="col-12 col-md text-center">
-            <p class="d-block my-3">Copyright © Your Company | All rights reserved.</p>
+            <p class="d-block my-3">Copyright © Profile Communications | All rights reserved.</p>
           </div>
         </div>
       </div>
