--- a/services.html
+++ b/services.html
@@ -88,7 +88,14 @@
             </div>
             <div class="text">
               <h3 class="heading">EVENTS SERVICES</h3>
-              <p>Profile Communications provides a wide range of event services including branding, program and speaker management, guest lists and invitations, supplier coordination, secretarial and meetings support, funds and sponsorships management, hosting and floor management, mass media coverage, speechwriting, social media management, advisory services, and MC/moderation.</p>
+              <p>Host your guests effortlessly. Let your team continue to focus on the core that you
+                hired them to do, while we run every errand of the event but with your approval every
+                step of the way. We will cover concept development to execution and event report
+                writing. We will develop it all including; program &amp; speakers, publicity, guest lists and
+                invitations branding &amp; graphics, sales and sponsorships, supplier coordination,
+                Secretarial and meetings, mass &amp; social media, writing speeches and talking notes, MC
+                and moderation, hosting&amp; floor management, event reports. Currently, we accept jobs
+                for VIP funerals.</p>
               <!-- <p><a href="./services.html">Learn more</a></p> -->
             </div>
 
