--- a/contact.html
+++ b/contact.html
@@ -26,21 +26,21 @@
 
   <header role="banner" class="probootstrap-header">
     <div class="container">
-        <a href="index.html" class="probootstrap-logo">Profile Communications</a>
+      <img src="./img/logo.png" height="60px" width="80px" alt="">
         
         <a href="#" class="probootstrap-burger-menu visible-xs" ><i></i></a>
         <div class="mobile-menu-overlay"></div>
 
         <nav role="navigation" class="probootstrap-nav hidden-xs">
           <ul class="probootstrap-main-nav">
-            <li class=""><a href="index.html">Home</a></li>
+            <li class="active"><a href="index.html">Home</a></li>
             <!-- <li><a href="projects.html">Projects</a></li> -->
-            <li ><a  href="services.html">Services</a></li>
+            <li><a href="services.html">Services</a></li>
             <!-- <li><a href="about.html">About</a></li> -->
-            <li class="active"><a href="contact.html">Contact</a></li>
+            <li><a href="contact.html">Contact</a></li>
           </ul>
           <ul class="probootstrap-right-nav hidden-xs">
-            <img src="./img/logo.png" height="60px" width="80px" alt="">
+            
           </ul>
           <div class="extra-text visible-xs"> 
             <a href="#" class="probootstrap-burger-menu"><i>Menu</i></a>
