--- a/index.html
+++ b/index.html
@@ -428,7 +428,7 @@
       <div class="row copyright">
         <div class="col-md-6">
           <div class="probootstrap-footer-widget">
-            <p>&copy; 2023 Designed by <a href="https://uicookies.com/">HiveMind Creative Co</a></p>
+            <p>&copy; 2023 Designed by <a href="github.com/steampunk99">Bonnie. L</a></p>
           </div>
         </div>
         <div class="col-md-6">
