--- a/contact.html
+++ b/contact.html
@@ -33,11 +33,11 @@
 
         <nav role="navigation" class="probootstrap-nav hidden-xs">
           <ul class="probootstrap-main-nav">
-            <li class="active"><a href="index.html">Home</a></li>
+            <li class=""><a href="index.html">Home</a></li>
             <!-- <li><a href="projects.html">Projects</a></li> -->
             <li><a href="services.html">Services</a></li>
             <!-- <li><a href="about.html">About</a></li> -->
-            <li><a href="contact.html">Contact</a></li>
+            <li class="active"><a href="contact.html">Contact</a></li>
           </ul>
           <ul class="probootstrap-right-nav hidden-xs">
             
@@ -59,7 +59,7 @@
   <!-- END: header -->
   <section class="probootstrap-slider flexslider">
     <ul class="slides">
-      <li style="background-image: url(img/slider_3.jpg);">
+      <li style="background-image: url();">
         <div class="container">
           <div class="row">
             <div class="col-md-12 text-center">
@@ -111,8 +111,8 @@
           <h4>Contact Details</h4>
           <ul class="with-icon colored">
             <li><i class="icon-location2"></i> <span>Kampala, Uganda</span></li>
-            <li><i class="icon-mail"></i><span>info@profilecomms.com</span></li>
-            <li><i class="icon-phone2"></i><span>+256 456 7890</span></li>
+            <li><i class="icon-mail"></i><span>office@profilecomms.com</span></li>
+            <li><i class="icon-phone2"></i><span>0772469090</span></li>
           </ul>
 
           <h4>Feedback</h4>
