--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
     <div class="container">
       <div class="row">
         <div class="col-md-8">
-          <p><img src="img/slider_3.jpg" alt="" class="img-responsive img-border"></p>
+          <p><img src="img/2.jpg" alt="" class="img-responsive img-border"></p>
          
 
           <!-- <p><a href="https://uicookies.com/" target="_blank" role="button" class="btn btn-primary btn-sm">Visit Website</a></p> -->
@@ -84,7 +84,7 @@
         <div class="panel-body">
           <h1 class="mb20">What is your story?</h1>
           <p style="font-size:20px">We can profile it using an event, a campaign, a video, a print or a combination of all and more.</p>
-          <p style="font-size:20px">Contact Us today at info@profilecomms.org or 077246909</p>
+          <p style="font-size:20px">Contact Us today at office@profilecomms.org or 0772469090</p>
           
         </div>
         <!-- END panel-group -->
@@ -106,8 +106,11 @@
               <i class="icon-laptop3"></i>
             </div>
             <div class="text">
-              <h3 class="heading">EVENTS SERVICES</h3>
-              <p>Profile Communications provides a wide range of event services including branding, program and speaker management, guest lists and invitations, supplier coordination, secretarial and meetings support..</p>
+              <h3 class="heading">EVENTS MANAGEMENT</h3>
+              <p>Host your guests effortlessly. Let your team continue to focus on the core that you
+                hired them to do, while we run every errand of the event but with your approval every
+                step of the way. We will cover concept development to execution and event report..
+                </p>
               <p><a href="./services.html">Learn more</a></p>
             </div>
 
@@ -119,8 +122,10 @@
               <i class="icon-presentation"></i>
             </div>
             <div class="text">
-              <h3 class="heading">COMMUNICATIONS & PR</h3>
-              <p>This includes serving as an external communications and PR department, providing people and client training, conducting PR audits, offering coaching for senior management and leadership teams, managing media..</p>
+              <h3 class="heading">CAMPAIGNS</h3>
+              <p>Change the community with the indicators on your target sheet. Political, developmental
+                and social campaigns are all welcome. We are happy to plan and execute your
+                campaign to create the change you want.</p>
               <p><a href="./services.html">Learn more</a></p>
             </div>
           </div>
@@ -132,7 +137,58 @@
             </div>
             <div class="text">
               <h3 class="heading">WRITING & DOCUMENTATION</h3>
-              <p>Our Writing and Documentation services encompass writing speeches, acting as a rapporteur, reviewing annual and quarterly reports, creating scripts, developing...</p>
+              <p>Share We have prowess to review, edit, draft, and document reports, stories, articles,
+                speeches, verbatim, scripts, essays, poetry, biographies, research papers, novels,
+                creatives, magazines, corporate newsletters and much more.</p>
+              <p><a href="./services.html">Learn more</a></p>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <!-- SECOND ROW -->
+      <div class="row">
+        <div class="col-md-4">
+          <div class="service left-icon probootstrap-animate">
+
+            <div class="icon">
+              <i class="icon-laptop3"></i>
+            </div>
+            <div class="text">
+              <h3 class="heading">PRINTING</h3>
+              <p>Start printing with the professionals. We have the same content, design, print concerns
+                as you. We are attentive and deadline sensitive. We pledge for maximum quality for
+                both your print and content.
+                </p>
+              <p><a href="./services.html">Learn more</a></p>
+            </div>
+
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div class="service left-icon probootstrap-animate">
+            <div class="icon">
+              <i class="icon-presentation"></i>
+            </div>
+            <div class="text">
+              <h3 class="heading">STAKEHOLDER MANAGEMENT</h3>
+              <p>Maintain excellent relations with your staff, current clients, fans, partners, competitors.
+                We will help you plan your festive or commemorative appreciations, deliver momentos,
+                represent you at meetings, Secretariat services.</p>
+              <p><a href="./services.html">Learn more</a></p>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div class="service left-icon probootstrap-animate">
+            <div class="icon">
+              <i class="icon-wallet2"></i>
+            </div>
+            <div class="text">
+              <h3 class="heading">PHOTOGRAPHY &amp; VIDEOGRAPHY</h3>
+              <p>Capture and disseminate your success with Profile communications. We give you all
+                the planning so you know what your video looks like before it is filmed. Script guides,
+                Scripts, shot notes,</p>
               <p><a href="./services.html">Learn more</a></p>
             </div>
           </div>
