--- a/services.html
+++ b/services.html
@@ -65,7 +65,7 @@
           <div class="row">
             <div class="col-md-12 text-center">
               <div class="slides-text probootstrap-animate">
-                <h2>Services</h2>
+                <h2>OUR SERVICES</h2>
                 <p>We specialize in providing exceptional services to clients looking to host successful events, enhance their public relations efforts, and produce high-quality writing and documentation.</p>
                 <p>Below are a list of all the services provided by our agency.</p>
               </div>
