--- a/contact.html
+++ b/contact.html
@@ -64,7 +64,7 @@
           <div class="row">
             <div class="col-md-12 text-center">
               <div class="slides-text probootstrap-animate">
-                <h2>Contact</h2>
+                <h2>CONTACT US </h2>
                 <p>We are here to tailor your needs and give you a memorable experience.</p>
               </div>
             </div>
