--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
     <div class="container">
       <div class="row">
         <div class="col-md-8">
-          <p><img src="img/2.jpg" alt="" class="img-responsive img-border"></p>
+          <p><img src="./img/2.jpg" alt="" class="img-responsive img-border"></p>
          
 
           <!-- <p><a href="https://uicookies.com/" target="_blank" role="button" class="btn btn-primary btn-sm">Visit Website</a></p> -->
