--- a/index.html
+++ b/index.html
@@ -34,8 +34,16 @@
             <!-- <li><a href="projects.html">Projects</a></li> -->
             
             <!-- <li><a href="about.html">About</a></li> -->
-            <li><a href="contact.html">Contact</a></li>
-            <li><a href="services.html">Services</a></li>
+            <!-- <li><a href="contact.html">Contact</a></li> -->
+            <!-- <li><a href="services.html">Services</a></li> -->
+            <li><a href="events.html">Events Management</a></li>
+            <li><a href="campaigns.html">Campaigns</a></li>
+            <li><a href="writing.html">Writing&Documentaion</a></li>
+            <li><a href="printing.html">Printing</a></li>
+            <li><a href="stakeholder.html">Stakeholder Managment</a></li>
+            <li><a href="photography.html">Photography&Videography</a></li>
+            <li><a href="advisory.html">Advisory</a></li>
+            <li><a href="digital.html">Digital Comms</a></li>
           </ul>
           <ul class="probootstrap-right-nav hidden-xs">
             
