--- a/campaigns.html
+++ b/campaigns.html
@@ -76,7 +76,7 @@
     <div class="container">
       <div class="row">
         <div class="col-md-7">
-          <p><img src="./img/1.jpg" alt="" style="filter: grayscale(50%);" class="img-responsive img-border"></p>
+          <p><img src="https://images.pexels.com/photos/6476589/pexels-photo-6476589.jpeg?auto=compress&cs=tinysrgb&w=600" alt="" style="filter: grayscale(50%);" class="img-responsive img-border"></p>
          
 
           <!-- <p><a href="https://uicookies.com/" target="_blank" role="button" class="btn btn-primary btn-sm">Visit Website</a></p> -->
