--- a/events.html
+++ b/events.html
@@ -77,7 +77,7 @@
     <div class="container">
       <div class="row">
         <div class="col-md-7">
-          <p><img src="./img/1.jpg" alt="" style="filter: grayscale(50%);" class="img-responsive img-border"></p>
+          <p><img src="https://images.pexels.com/photos/265947/pexels-photo-265947.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2" alt="" " class="img-responsive img-border"></p>
          
 
           <!-- <p><a href="https://uicookies.com/" target="_blank" role="button" class="btn btn-primary btn-sm">Visit Website</a></p> -->
@@ -93,7 +93,7 @@
  
             Host your guests effortlessly. Let your team continue to focus on the core that you
             hired them to do, while we run every errand of the event but with your approval every
-            step of the way. We will cover concept development to execution and event report
+            step of the way. <br>We will cover concept development to execution and event report
             writing. We will develop it all including; program &amp; speakers, publicity, guest lists and
             invitations branding &amp; graphics, sales and sponsorships, supplier coordination,
             Secretarial and meetings, mass &amp; social media, writing speeches and talking notes, MC
