--- a/photography.html
+++ b/photography.html
@@ -76,7 +76,7 @@
     <div class="container">
       <div class="row">
         <div class="col-md-7">
-          <p><img src="./img/1.jpg" alt="" style="filter: grayscale(50%);" class="img-responsive img-border"></p>
+          <p><img src="https://images.pexels.com/photos/403495/pexels-photo-403495.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2" alt="" style="filter: grayscale(50%);" class="img-responsive img-border"></p>
          
 
           <!-- <p><a href="https://uicookies.com/" target="_blank" role="button" class="btn btn-primary btn-sm">Visit Website</a></p> -->
@@ -89,7 +89,7 @@
         <div class="panel-body">
           <h1 class="mb20">PHOTOGRAPHY & VIDEOGRAPHY</h1>
           <p style="font-size:18px">
-            Capture and disseminate your success with Profile communications. We give you all
+            Capture and disseminate your success with Profile communications. <br><br>We give you all
             the planning so you know what your video looks like before it is filmed. Script guides,
             Scripts, shot notes.</p>
           <!-- <p style="font-size:20px">Contact Us today at office@profilecomms.org or 0772469090</p> -->
