--- a/printing.html
+++ b/printing.html
@@ -77,7 +77,7 @@
     <div class="container">
       <div class="row">
         <div class="col-md-7">
-          <p><img src="./img/1.jpg" alt="" style="filter: grayscale(50%);" class="img-responsive img-border"></p>
+          <p><img src="https://images.pexels.com/photos/3220846/pexels-photo-3220846.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2" alt="" style="filter: grayscale(50%);" class="img-responsive img-border"></p>
          
 
           <!-- <p><a href="https://uicookies.com/" target="_blank" role="button" class="btn btn-primary btn-sm">Visit Website</a></p> -->
@@ -91,7 +91,7 @@
           <h1 class="mb20">PRINTING</h1>
           <p style="font-size:18px">
             Start printing with the professionals. We have the same content, design, print concerns
-            as you. We are attentive and deadline sensitive. We pledge for maximum quality for
+            as you. <br/><br/>We are attentive and deadline sensitive. We pledge for maximum quality for
             both your print and content.</p>
           <!-- <p style="font-size:20px">Contact Us today at office@profilecomms.org or 0772469090</p> -->
           
