--- a/stakeholder.html
+++ b/stakeholder.html
@@ -76,7 +76,7 @@
     <div class="container">
       <div class="row">
         <div class="col-md-7">
-          <p><img src="./img/1.jpg" alt="" style="filter: grayscale(50%);" class="img-responsive img-border"></p>
+          <p><img src="./img/2.jpg" alt="" style="filter: grayscale(50%);" class="img-responsive img-border"></p>
          
 
           <!-- <p><a href="https://uicookies.com/" target="_blank" role="button" class="btn btn-primary btn-sm">Visit Website</a></p> -->
@@ -90,8 +90,8 @@
           <h1 class="mb20">STAKEHOLDER MANAGEMENT</h1>
           <p style="font-size:18px">
             Maintain excellent relations with your staff, current clients, fans, partners, competitors.
-We will help you plan your festive or commemorative appreciations, deliver momentos,
-represent you at meetings, Secretariat services.</p>
+          <br><br>We will help you plan your festive or commemorative appreciations, deliver momentos,
+                represent you at meetings, Secretariat services.</p>
           <!-- <p style="font-size:20px">Contact Us today at office@profilecomms.org or 0772469090</p> -->
           
         </div>
