--- a/writing.html
+++ b/writing.html
@@ -77,7 +77,7 @@
     <div class="container">
       <div class="row">
         <div class="col-md-7">
-          <p><img src="./img/1.jpg" alt="" style="filter: grayscale(50%);" class="img-responsive img-border"></p>
+          <p><img src="https://images.pexels.com/photos/4065400/pexels-photo-4065400.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2" alt="" style="filter: grayscale(50%);" class="img-responsive img-border"></p>
          
 
           <!-- <p><a href="https://uicookies.com/" target="_blank" role="button" class="btn btn-primary btn-sm">Visit Website</a></p> -->
