search engine optimization

--- a/index.html
+++ b/index.html
@@ -5,8 +5,10 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Profile Communications Uganda</title>
-    <meta name="description" content="Profile Communications Uganda">
-    <meta name="keywords" content="Profile Communications Uganda">
+    <meta name="description" content="Profile Communications specializes in providing exceptional services to clients looking to host successful events, enhance their public relations efforts, and produce high-quality writing and documentation.">
+    <meta name="keywords" content="Profile Communications Uganda, Profile Comms, Profile Communications, Advisory, Public Relations, PR, Digital Comms, Digital Communications,campaign, campaigns,stakeholder, stakeholder management, events services, events managament, high-quality writing, documentation">
+
+    
     
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400" rel="stylesheet">
     <link rel="stylesheet" href="css/styles-merged.css">
