--- a/index.html
+++ b/index.html
@@ -8,7 +8,11 @@
     <meta name="description" content="Profile Communications specializes in providing exceptional services to clients looking to host successful events, enhance their public relations efforts, and produce high-quality writing and documentation.">
     <meta name="keywords" content="Profile Communications Uganda, Profile Comms, Profile Communications, Advisory, Public Relations, PR, Digital Comms, Digital Communications,campaign, campaigns,stakeholder, stakeholder management, events services, events managament, high-quality writing, documentation">
 
-    
+ <!-- Open Graph Protocol meta tags -->
+ <meta property="og:title" content="Profile Communications Uganda">
+ <meta property="og:description" content="We provide exceptional services to clients looking to host successful events, enhance their public relations efforts and produce high-quality writing and documentation.">
+ <meta property="og:image" content="/img/whatsapp.png">
+ <meta property="og:url" content="profilecomms.org">    
     
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400" rel="stylesheet">
     <link rel="stylesheet" href="css/styles-merged.css">
