--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
  <!-- Open Graph Protocol meta tags -->
  <meta property="og:title" content="Profile Communications Uganda">
  <meta property="og:description" content="We provide exceptional services to clients looking to host successful events, enhance their public relations efforts and produce high-quality writing and documentation.">
- <meta property="og:image" content="/img/whatsapp.png">
+ <meta property="og:image" content="https://github.com/steampunk99/profilecomms/blob/main/img/whatsapp.png?raw=true">
  <meta property="og:url" content="profilecomms.org">    
     
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400" rel="stylesheet">
