--- a/digital.html
+++ b/digital.html
@@ -91,7 +91,7 @@
           <h1 class="mb20">DIGITAL COMMS</h1>
           <p style="font-size:20px">Assign us to manage your email accounts, call centers, video conferencing, social
             media platforms, podcasts.</p>
-          <p style="font-size:20px">Contact Us today at office@profilecomms.org or 0772469090</p>
+          <p style="font-size:20px">Contact Us today at office@profilecomms.org or +256772469090</p>
           
         </div>
         <!-- END panel-group -->
