--- a/writing.html
+++ b/writing.html
@@ -90,7 +90,7 @@
         <div class="panel-body">
           <h1 class="mb20">WRITING & DOCUMENTATION</h1>
           <p style="font-size:18px">
-            Share We have prowess to review, edit, draft, and document reports, stories, articles,
+            We have prowess to review, edit, draft, and document reports, stories, articles,
             speeches, verbatim, scripts, essays, poetry, biographies, research papers, novels,
             creatives, magazines, corporate newsletters and much more.</p>
           <!-- <p style="font-size:20px">Contact Us today at office@profilecomms.org or 0772469090</p> -->
