--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
         <div class="panel-body">
           <h1 class="mb20">What is your story?</h1>
           <p style="font-size:20px">We can profile it using an event, a campaign, a video, a print or a combination of all and more.</p>
-          <p style="font-size:20px">Contact Us today at office@profilecomms.org or 0772469090</p>
+          <p style="font-size:20px">Contact Us today at office@profilecomms.org or +256772469090</p>
           
         </div>
         <!-- END panel-group -->
@@ -152,7 +152,7 @@
             </div>
             <div class="text">
               <h3 class="heading">WRITING & DOCUMENTATION</h3>
-              <p>Share We have prowess to review, edit, draft, and document reports, stories, articles,
+              <p> We have prowess to review, edit, draft, and document reports, stories, articles,
                 speeches, verbatim, scripts, essays, poetry, biographies, research papers, novels,
                 creatives, magazines, corporate newsletters and much more.</p>
               
