--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
   <header role="banner" class="probootstrap-header">
     <div class="container">
-      <img src="./img/logo.png" height="70px" width="200px" alt="">
+      <img src="https://github.com/steampunk99/profilecomms/blob/main/img/logo.png?raw=true" height="70px" width="200px" alt="">
         
         <a href="#" class="probootstrap-burger-menu visible-xs" ><i></i></a>
         <div class="mobile-menu-overlay"></div>
